Added UpdateProduct to swagger
